--- a/research.ipynb
+++ b/research.ipynb
@@ -1166,8 +1166,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "id": "df5a67fe",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create user-product interaction matrix\n",
+    "user_product_matrix = df.pivot_table(index='CustomerID', columns='Description', values='Quantity', aggfunc='sum').fillna(0)\n",
+    "\n",
+    "# Optional: Save it for Streamlit use\n",
+    "user_product_matrix.to_csv('output/user_product_matrix.csv')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "eaf1adfb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics.pairwise import cosine_similarity\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import pickle\n",
+    "\n",
+    "# Load the matrix\n",
+    "user_product_matrix = pd.read_csv('output/user_product_matrix.csv', index_col=0)\n",
+    "\n",
+    "# Transpose to get item-item similarity\n",
+    "product_user_matrix = user_product_matrix.T  # Rows = Products, Columns = Customers\n",
+    "\n",
+    "# Compute similarity matrix\n",
+    "item_similarity = cosine_similarity(product_user_matrix)\n",
+    "\n",
+    "# Save it as a DataFrame for easier usage\n",
+    "item_similarity_df = pd.DataFrame(item_similarity, index=product_user_matrix.index, columns=product_user_matrix.index)\n",
+    "\n",
+    "# Save for Streamlit app\n",
+    "with open('models/item_similarity.pkl', 'wb') as f:\n",
+    "    pickle.dump(item_similarity_df, f)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "000298c5",
    "metadata": {},
    "outputs": [],
    "source": []
